--- a/SGPROLANGUAGES.az/HTML/about-us.html
+++ b/SGPROLANGUAGES.az/HTML/about-us.html
@@ -1,3 +1,4 @@
+<!-- ABOUT US HTML  -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,34 +7,93 @@
     <title>Document</title>
     <link rel="stylesheet" href="../global css/reset.css" />
     <link rel="stylesheet" href="../global css/config.css" />
-    <link rel="stylesheet" href="../global css/global.css">
+    <link rel="stylesheet" href="../global css/global.css" />
     <link rel="stylesheet" href="../STYLE/about-us.css" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
   </head>
   <body>
-    <!-- HEADR SECTION  -->
-    <!-- HEADR SECTION  -->
+    <!-- HEADER SECTION  -->
+    <!-- HEADER SECTION  -->
     <nav class="navbar">
       <h1>SGPRO</h1>
+
       <div class="menu-toggle" id="menuToggle">
         <span></span>
         <span></span>
         <span></span>
       </div>
-      <ul class="nav-links" id="navLinks">
-        <li><a href="#home" data-i18n="nav_home">Home</a></li>
-        <li><a href="#contact" data-i18n="nav_contact">Contact</a></li>
-        <li><a href="#about" class="active" data-i18n="nav_about">About Us</a></li>
-      </ul>
+
+      <div class="nav-right">
+        <ul class="nav-links" id="navLinks">
+          <li><a href="#home" data-i18n="nav_home">Home</a></li>
+          <li><a href="#contact" data-i18n="nav_contact">Contact</a></li>
+          <li>
+            <a href="#about" class="active" data-i18n="nav_about">About Us</a>
+          </li>
+        </ul>
+
+        <!-- YENİ DİL DROPDOWN BURADADIR -->
+        <div class="language-switcher">
+          <button class="lang-toggle" id="langToggle">
+            <span id="currentLangLabel">EN</span>
+            <i class="fa-solid fa-chevron-down"></i>
+          </button>
+
+          <div class="lang-dropdown" id="langDropdown">
+            <button class="lang-option" data-lang="az">AZ</button>
+            <button class="lang-option" data-lang="en">EN</button>
+            <button class="lang-option" data-lang="ru">RU</button>
+          </div>
+        </div>
+      </div>
     </nav>
-    <div class="language-switcher">
-      <button data-lang="az">AZ</button>
-      <button data-lang="en">EN</button>
-      <button data-lang="ru">RU</button>
-    </div>
-     <!-- Main Content -->
+
+    <!-- Main Content -->
+    <!-- ABOUT HERO SECTION -->
+    <section class="about-hero">
+      <div class="about-hero__overlay">
+        <div class="about-hero__content">
+          <h1 data-i18n="about_title">About Us</h1>
+          <p data-i18n="about_subtitle">What's behind The Agency?</p>
+
+          <a
+            href="#about-details"
+            class="about-hero__btn"
+            data-i18n="read_about_btn"
+          >
+            <i class="fa-solid fa-align-left"></i>
+            <span>READ ABOUT US</span>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <section id="about-details" class="about-details">
+      <div class="agency-details">
+      <h1>We are The Agency</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda
+        minima similique perferendis pariatur recusandae, atque molestiae
+        eveniet, placeat dicta quisquam illo voluptas nisi magnam ex accusamus
+        temporibus possimus tempore eos?
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
+        voluptatibus tempore atque magnam unde. Delectus ducimus amet officia
+        quo quis sit dicta, nemo voluptate itaque quas rerum, debitis quidem
+        iure!
+      </p>
+      <button class="agency-details-button">💼WHAT WE DO</button>
+      </div>
+    </section>
+
     <!-- FOOTER -->
     <!-- FOOTER -->
     <!-- FOOTER -->
@@ -53,10 +113,18 @@
             </p>
           </div>
           <nav class="footer-nav">
-            <a href="home.html" class="nav-link" data-i18n="footer_home">Home</a>
-            <a href="services.html" class="nav-link" data-i18n="footer_services">Services</a>
-            <a href="about-us.html" class="nav-link" data-i18n="footer_about">About Us</a>
-            <a href="contact.html" class="nav-link" data-i18n="footer_contact">Contact </a>
+            <a href="home.html" class="nav-link" data-i18n="footer_home"
+              >Home</a
+            >
+            <a href="services.html" class="nav-link" data-i18n="footer_services"
+              >Services</a
+            >
+            <a href="about-us.html" class="nav-link" data-i18n="footer_about"
+              >About Us</a
+            >
+            <a href="contact.html" class="nav-link" data-i18n="footer_contact"
+              >Contact
+            </a>
           </nav>
         </div>
         <div class="footer-bottom">
@@ -67,28 +135,33 @@
             <a href="#" class="social-link" aria-label="Facebook">
               <svg fill="currentColor" viewBox="0 0 24 24">
                 <path
-                  d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z" />
+                  d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"
+                />
               </svg>
             </a>
             <a href="#" class="social-link" aria-label="Twitter">
               <svg fill="currentColor" viewBox="0 0 24 24">
                 <path
-                  d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" />
+                  d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"
+                />
               </svg>
             </a>
             <a
               href="https://www.instagram.com/sgpro.az/  "
               class="social-link"
-              aria-label="Instagram">
+              aria-label="Instagram"
+            >
               <svg fill="currentColor" viewBox="0 0 24 24">
                 <path
-                  d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" />
+                  d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"
+                />
               </svg>
             </a>
             <a href="#" class="social-link" aria-label="LinkedIn">
               <svg fill="currentColor" viewBox="0 0 24 24">
                 <path
-                  d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z" />
+                  d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"
+                />
               </svg>
             </a>
           </div>
