FRONT END READY

--- a/SGPROLANGUAGES.az/HTML/home.html
+++ b/SGPROLANGUAGES.az/HTML/home.html
@@ -58,6 +58,397 @@
     </nav>
 
     <!-- BURAYA SONRA HOME HERO / CONTENT QOŞA BİLƏRSƏN -->
+    <!-- MAIN -->
+    <!-- MAIN -->
+    <!-- MAIN -->
+    <!-- Main Content -->
+    <!-- Main Content -->
+
+    <main class="home-main">
+      <!-- HERO SECTION -->
+      <section id="home" class="home-hero">
+        <div class="home-hero-bg" data-parallax-layer="0.4"></div>
+        <div
+          class="home-hero-glow home-hero-glow--left"
+          data-parallax-layer="0.2"
+        ></div>
+        <div
+          class="home-hero-glow home-hero-glow--right"
+          data-parallax-layer="0.6"
+        ></div>
+
+        <div class="home-hero-inner">
+          <div
+            class="home-hero-content reveal-on-scroll"
+            data-animate="fade-up"
+          >
+            <div class="home-hero-tag">
+              <span class="dot"></span>
+              Creative & Digital Studio
+            </div>
+
+            <h1 class="home-hero-title">
+              We design bold brands
+              <span class="home-hero-highlight"
+                >and modern digital experiences.</span
+              >
+            </h1>
+
+            <p class="home-hero-subtitle">
+              SGPRO — kreativ reklam, veb dizayn, UI/UX, outdoor və sosial media
+              kontenti üzrə tam xidmət göstərən agentlikdir. Dizayna abanırıq,
+              detala qədər işləyirik.
+            </p>
+
+            <div class="home-hero-actions">
+              <a href="about-us.html" class="btn btn-primary">
+                View Services
+                <i class="fa-solid fa-arrow-right-long"></i>
+              </a>
+              <a href="#portfolio" class="btn btn-ghost">
+                See Portfolio
+                <i class="fa-solid fa-play"></i>
+              </a>
+            </div>
+
+            <div class="home-hero-stats">
+              <div class="stat-item">
+                <span class="stat-number">+120</span>
+                <span class="stat-label">Completed projects</span>
+              </div>
+              <div class="stat-item">
+                <span class="stat-number">4.9★</span>
+                <span class="stat-label">Client rating</span>
+              </div>
+              <div class="stat-item">
+                <span class="stat-number">8+</span>
+                <span class="stat-label">Years experience</span>
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="home-hero-visual reveal-on-scroll"
+            data-animate="fade-left"
+          >
+            <div class="hero-card hero-card-main" data-parallax-layer="1">
+              <div class="hero-card-header">
+                <span class="hero-pill hero-pill--primary">Featured case</span>
+                <span class="hero-pill hero-pill--soft">
+                  <i class="fa-solid fa-bolt"></i>
+                  Rebranding
+                </span>
+              </div>
+              <h3>Alma Bağı Hotels & Villas</h3>
+              <p>
+                Kompleks brendinq, signage, wayfinding, veb dizayn və sosial
+                media vizualları – hamısı vahid vizual üslubda.
+              </p>
+              <div class="hero-card-footer">
+                <div class="hero-meta-block">
+                  <span class="hero-meta-label">Scope</span>
+                  <span class="hero-meta-value">Branding, 3D, Outdoor</span>
+                </div>
+                <button class="btn btn-link">
+                  View project
+                  <i class="fa-solid fa-arrow-right-long"></i>
+                </button>
+              </div>
+            </div>
+
+            <div
+              class="hero-floating hero-floating--top"
+              data-parallax-layer="1.4"
+            >
+              <div class="hero-floating-icon">
+                <i class="fa-solid fa-vector-square"></i>
+              </div>
+              <div class="hero-floating-text">
+                <span class="mini-label">UI/UX Design</span>
+                <span class="mini-value">Web & dashboard interfaces</span>
+              </div>
+            </div>
+
+            <div
+              class="hero-floating hero-floating--bottom"
+              data-parallax-layer="1.8"
+            >
+              <div class="hero-floating-icon hero-floating-icon--alt">
+                <i class="fa-solid fa-sign-hanging"></i>
+              </div>
+              <div class="hero-floating-text">
+                <span class="mini-label">Outdoor & signage</span>
+                <span class="mini-value">Fasad, 3D letters, light boxes</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- SERVICES SECTION -->
+      <section id="about" class="home-section home-services">
+        <div
+          class="home-section-header reveal-on-scroll"
+          data-animate="fade-up"
+        >
+          <span class="section-tag">What we do</span>
+          <h2>Full–stack creative production for your brand.</h2>
+          <p>
+            Logo və kimlikdən tutmuş vebsayt, outdoor, interyer, sosial media və
+            animasiyaya qədər – hamısı bir komandada.
+          </p>
+        </div>
+
+        <div class="home-services-grid">
+          <article class="service-card reveal-on-scroll" data-animate="fade-up">
+            <div class="service-icon">
+              <i class="fa-solid fa-shapes"></i>
+            </div>
+            <h3>Branding & Identity</h3>
+            <p>
+              Logo, brend kitabça, packaging və vizual sistem — tanınan və yadda
+              qalan üslub.
+            </p>
+            <ul class="service-list">
+              <li>Logo & wordmark</li>
+              <li>Brand guidelines</li>
+              <li>Packaging concepts</li>
+            </ul>
+          </article>
+
+          <article class="service-card reveal-on-scroll" data-animate="fade-up">
+            <div class="service-icon">
+              <i class="fa-solid fa-display"></i>
+            </div>
+            <h3>Web & UI Design</h3>
+            <p>
+              Modern, responsive və animasiyalı interfeyslər — biznesinə uyğun
+              veb təcrübə.
+            </p>
+            <ul class="service-list">
+              <li>Landing pages</li>
+              <li>Multi-page websites</li>
+              <li>Admin & dashboards</li>
+            </ul>
+          </article>
+
+          <article class="service-card reveal-on-scroll" data-animate="fade-up">
+            <div class="service-icon">
+              <i class="fa-solid fa-tower-broadcast"></i>
+            </div>
+            <h3>Outdoor & Signage</h3>
+            <p>
+              Fasad reklamları, 3D hərflər, işıqlı qutular, yönləndirici
+              sistemlər.
+            </p>
+            <ul class="service-list">
+              <li>FHN / Adra uyğun həllər</li>
+              <li>3D modellər & vizuallar</li>
+              <li>Material seçimi & eskizlər</li>
+            </ul>
+          </article>
+
+          <article class="service-card reveal-on-scroll" data-animate="fade-up">
+            <div class="service-icon">
+              <i class="fa-solid fa-clapperboard"></i>
+            </div>
+            <h3>Social & Motion</h3>
+            <p>
+              Sosial şəbəkə üçün post, storilər, motion dizayn və reklam
+              videoları.
+            </p>
+            <ul class="service-list">
+              <li>Content grid & şablonlar</li>
+              <li>Reels & short video</li>
+              <li>Ad creatives</li>
+            </ul>
+          </article>
+        </div>
+      </section>
+
+      <!-- PROCESS SECTION (NEW) -->
+      <section class="home-section home-process">
+        <div
+          class="home-section-header reveal-on-scroll"
+          data-animate="fade-up"
+        >
+          <span class="section-tag">Process</span>
+          <h2>From idea to installed sign.</h2>
+          <p>
+            Yalnız dizayn yox, icraya qədər bütün mərhələləri düşünürük – sənə
+            sadə, bizə strukturlaşdırılmış iş axını.
+          </p>
+        </div>
+
+        <div class="process-grid">
+          <article class="process-card reveal-on-scroll" data-animate="fade-up">
+            <div class="process-step">01</div>
+            <h3>Discovery & briefing</h3>
+            <p>
+              Brendini, məkanı və məqsədləri anlayırıq, ölçü, material və
+              texniki tələbləri toplayırıq.
+            </p>
+          </article>
+
+          <article class="process-card reveal-on-scroll" data-animate="fade-up">
+            <div class="process-step">02</div>
+            <h3>Concept & design</h3>
+            <p>
+              Figma, 3D və vizual eskizlərlə bir neçə konsept hazırlayıb,
+              səninlə birlikdə seçirik.
+            </p>
+          </article>
+
+          <article class="process-card reveal-on-scroll" data-animate="fade-up">
+            <div class="process-step">03</div>
+            <h3>Technical & approvals</h3>
+            <p>
+              Ölçü–kəsim planları, material seçimi, Adra / FHN üçün uyğun
+              vizuallar və fayllar.
+            </p>
+          </article>
+
+          <article class="process-card reveal-on-scroll" data-animate="fade-up">
+            <div class="process-step">04</div>
+            <h3>Production & launch</h3>
+            <p>
+              Çap, konstruksiya, montaj və yerində final yoxlama — vizuallar
+              real məkanda yaşayır.
+            </p>
+          </article>
+        </div>
+      </section>
+
+      <!-- PORTFOLIO / HIGHLIGHTS -->
+      <section id="portfolio" class="home-section home-portfolio">
+        <div
+          class="home-section-header reveal-on-scroll"
+          data-animate="fade-up"
+        >
+          <span class="section-tag">Selected work</span>
+          <h2>Projects that connect brands with people.</h2>
+          <p>
+            Burada yalnız bir neçə nümunə göstərilib — real projelərdə dizayn,
+            konstruksiya və kommunikasiya birlikdə işləyir.
+          </p>
+        </div>
+
+        <div class="home-portfolio-grid">
+          <article
+            class="portfolio-card reveal-on-scroll"
+            data-animate="fade-up"
+          >
+            <div class="portfolio-badge">Hospitality</div>
+            <h3>Meysəri Boutique Hotel</h3>
+            <p>
+              Üzüm konseptli interyer qrafikası, relyeflər, signage və premium
+              wayfinding sistemi.
+            </p>
+            <div class="portfolio-meta">
+              <span
+                ><i class="fa-solid fa-layer-group"></i> 3D & interior
+                graphics</span
+              >
+              <span
+                ><i class="fa-solid fa-circle-dot"></i> Concept →
+                production</span
+              >
+            </div>
+          </article>
+
+          <article
+            class="portfolio-card reveal-on-scroll"
+            data-animate="fade-up"
+          >
+            <div class="portfolio-badge">Retail</div>
+            <h3>AxesStore Accessories</h3>
+            <p>
+              Telefon aksesuarları üçün packaging, instaqram vizualları və
+              mağaza daxili brendinq.
+            </p>
+            <div class="portfolio-meta">
+              <span
+                ><i class="fa-solid fa-bag-shopping"></i> POS & packaging</span
+              >
+              <span
+                ><i class="fa-solid fa-arrow-trend-up"></i> Sales–driven
+                visuals</span
+              >
+            </div>
+          </article>
+
+          <article
+            class="portfolio-card reveal-on-scroll"
+            data-animate="fade-up"
+          >
+            <div class="portfolio-badge">Corporate</div>
+            <h3>Innotax Consulting</h3>
+            <p>
+              Mühasibat və vergi xidmətləri üçün minimal korporativ stil,
+              təqdimat şablonları və sosial media seti.
+            </p>
+            <div class="portfolio-meta">
+              <span><i class="fa-solid fa-briefcase"></i> B2B positioning</span>
+              <span
+                ><i class="fa-solid fa-chart-line"></i> Clear visual
+                language</span
+              >
+            </div>
+          </article>
+        </div>
+      </section>
+
+      <!-- CLIENTS / PARTNERS (NEW) -->
+      <section class="home-section home-clients">
+        <div
+          class="home-section-header reveal-on-scroll"
+          data-animate="fade-up"
+        >
+          <span class="section-tag">Clients & partners</span>
+          <h2>Brands that trust our design work.</h2>
+          <p>
+            Otel, retail, istehsal və xidmət sektorundan olan müxtəlif
+            bizneslərlə uzunmüddətli əməkdaşlıq edirik.
+          </p>
+        </div>
+
+        <div class="clients-strip reveal-on-scroll" data-animate="fade-up">
+          <div class="client-pill">Alma Bağı Hotels & Villas</div>
+          <div class="client-pill">Meysəri</div>
+          <div class="client-pill">AxesStore</div>
+          <div class="client-pill">Innotax</div>
+          <div class="client-pill">Mirror MMC</div>
+          <div class="client-pill">Harmony Media</div>
+        </div>
+      </section>
+
+      <!-- CTA SECTION -->
+      <section id="contact" class="home-section home-cta">
+        <div class="home-cta-inner reveal-on-scroll" data-animate="fade-up">
+          <div class="home-cta-text">
+            <h2>Got a project in mind?</h2>
+            <p>
+              Qrafika, vebsayt, outdoor və ya tam brend yenilənməsi – fikrini
+              qısa yaz, qalan hər şeyi birlikdə planlayaq.
+            </p>
+          </div>
+          <div class="home-cta-actions">
+            <a href="contact.html" class="btn btn-primary btn-wide">
+              Contact us
+              <i class="fa-solid fa-paper-plane"></i>
+            </a>
+            <span class="home-cta-note">
+              <i class="fa-solid fa-circle-check"></i>
+              We reply within 1 business day.
+            </span>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!-- FOOTER -->
+
+    <!-- FOOTER -->
 
     <!-- FOOTER -->
     <footer class="footer">
@@ -85,11 +476,7 @@
             >
               Portfolio
             </a>
-            <a
-              href="about-us.html"
-              class="nav-link"
-              data-i18n="footer_about"
-            >
+            <a href="about-us.html" class="nav-link" data-i18n="footer_about">
               About Us
             </a>
             <a href="contact.html" class="nav-link" data-i18n="footer_contact">
