--- a/SGPROLANGUAGES.az/HTML/about-us.html
+++ b/SGPROLANGUAGES.az/HTML/about-us.html
@@ -132,8 +132,8 @@
                 <h2>Meet Our Team</h2>
                 <div class="team-grid">
                     <div class="team-member">
-                        <div class="member-photo">JS</div>
-                        <h3>John Smith</h3>
+                        <div class="member-photo">JS</div>z 
+                        <h3>İmran İbrahimov</h3>
                         <div class="role">CEO & Founder</div>
                         <p>Visionary leader with 15+ years of experience in tech industry.</p>
                     </div>
