--- a/SGPROLANGUAGES.az/HTML/contact.html
+++ b/SGPROLANGUAGES.az/HTML/contact.html
@@ -5,17 +5,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact - SGPRO</title>
+
+    <!-- GLOBAL STYLES -->
     <link rel="stylesheet" href="../global css/reset.css" />
     <link rel="stylesheet" href="../global css/config.css" />
     <link rel="stylesheet" href="../global css/global.css" />
     <link rel="stylesheet" href="../STYLE/contact.css" />
+
+    <!-- ICONS -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
   </head>
   <body>
-    <!-- HEADER SECTION  -->
+    <!-- OPTIONAL BACKGROUND BUBBLES (CSS-də var idi) -->
+    <div class="bg-bubbles">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+
+    <!-- HEADER / NAVBAR -->
     <nav class="navbar">
       <h1>SGPRO</h1>
 
@@ -63,7 +81,7 @@
       </div>
     </nav>
 
-    <!-- Contact Form -->
+    <!-- CONTACT FORM WRAPPER -->
     <div class="contact-wrapper">
       <div class="contact-container">
         <div class="contact-header">
@@ -74,9 +92,16 @@
         </div>
 
         <form id="contactForm">
+          <!-- FULL NAME -->
           <div class="form-group">
+            <input
+              type="text"
+              id="name"
+              name="name"
+              placeholder=" "
+              required
+            />
             <label for="name" data-i18n="form_name_label">Full Name *</label>
-            <input type="text" id="name" name="name" required />
             <span
               class="error-message"
               id="nameError"
@@ -86,11 +111,18 @@
             </span>
           </div>
 
+          <!-- EMAIL -->
           <div class="form-group">
+            <input
+              type="email"
+              id="email"
+              name="email"
+              placeholder=" "
+              required
+            />
             <label for="email" data-i18n="form_email_label">
               Email Address *
             </label>
-            <input type="email" id="email" name="email" required />
             <span
               class="error-message"
               id="emailError"
@@ -100,16 +132,29 @@
             </span>
           </div>
 
+          <!-- PHONE -->
           <div class="form-group">
+            <input
+              type="tel"
+              id="phone"
+              name="phone"
+              placeholder=" "
+            />
             <label for="phone">Phone Number</label>
-            <input type="tel" id="phone" name="phone" />
           </div>
 
+          <!-- SUBJECT -->
           <div class="form-group">
+            <input
+              type="text"
+              id="subject"
+              name="subject"
+              placeholder=" "
+              required
+            />
             <label for="subject" data-i18n="form_subject_label">
               Subject *
             </label>
-            <input type="text" id="subject" name="subject" required />
             <span
               class="error-message"
               id="subjectError"
@@ -119,11 +164,17 @@
             </span>
           </div>
 
+          <!-- MESSAGE -->
           <div class="form-group">
+            <textarea
+              id="message"
+              name="message"
+              placeholder=" "
+              required
+            ></textarea>
             <label for="message" data-i18n="form_message_label">
               Message *
             </label>
-            <textarea id="message" name="message" required></textarea>
             <span
               class="error-message"
               id="messageError"
@@ -131,8 +182,10 @@
             >
               Please enter your message
             </span>
+            <!-- Buraya JS avtomatik character counter əlavə edəcək -->
           </div>
 
+          <!-- SUBMIT BUTTON -->
           <button
             type="submit"
             class="submit-btn"
@@ -141,6 +194,7 @@
             Send Message
           </button>
 
+          <!-- SUCCESS MESSAGE -->
           <div
             class="success-message"
             id="successMessage"
@@ -167,6 +221,7 @@
               their startups with the absolute least amount of effort.
             </p>
           </div>
+
           <nav class="footer-nav">
             <a href="home.html" class="nav-link" data-i18n="footer_home">
               Home
@@ -185,11 +240,16 @@
             >
               About Us
             </a>
-            <a href="contact.html" class="nav-link" data-i18n="footer_contact">
+            <a
+              href="contact.html"
+              class="nav-link"
+              data-i18n="footer_contact"
+            >
               Contact
             </a>
           </nav>
         </div>
+
         <div class="footer-bottom">
           <div class="copyright" data-i18n="footer_copy">
             Copyright 2025© SGPRO. All Rights Reserved.
@@ -225,13 +285,14 @@
                 <path
                   d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"
                 />
-              </svg>        
+              </svg>
             </a>
           </div>
         </div>
       </div>
     </footer>
 
+    <!-- SCRIPTS -->
     <script src="../SCRIPT/lang.js"></script>
     <script src="../SCRIPT/contact.js"></script>
   </body>
