--- a/SGPROLANGUAGES.az/HTML/contact.html
+++ b/SGPROLANGUAGES.az/HTML/contact.html
@@ -1,286 +1,185 @@
-<!-- CONTACT HTML -->
-
 <!DOCTYPE html>
 <html lang="en">
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>
-   Document
-  </title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/>
-  <link href="../global css/global.css" rel="stylesheet"/>
-  <link href="../global css/config.css" rel="stylesheet"/>
-  <link href="../global css/reset.css" rel="stylesheet"/>
-  
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link href="../STYLE/about-us.css" rel="stylesheet"/>
-  <link href="../STYLE/responsive.css" rel="stylesheet"/>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
- </head>
- <body
-  <nav>
-   <div class="logo">
-    <i class="fas fa-plane-departure">
-    </i>
-    <span>
-     AZ Land
-    </span>
-   </div>
-   <ul class="nav-links">
-    <li>
-     <a data-i18n="nav_home" href="./index.html">
-      Ana Səhifə
-     </a>
-    </li>
-    <li>
-     <a data-i18n="nav_map" href="./map.html">
-      Xəritə
-     </a>
-    </li>
-    <li>
-     <a href="faq.html">
-      FAQ
-     </a>
-    </li>
-    <li>
-     <a class="active" data-i18n="nav_about" href="./about-us.html">
-      Haqqımızda
-     </a>
-    </li>
-    <li>
-     <a data-i18n="nav_contact" href="./contact.html">
-      Əlaqə
-     </a>
-    </li>
-    <li>
-     <a data-i18n="nav_prices" href="./price.html">
-      Qiymətlər
-     </a>
-    </li>
-    <li>
-     <a class="btn-login" data-i18n="nav_login" href="./login.html" id="nav-auth-btn">
-      Giriş
-     </a>
-    </li>
-    <li class="lang-switcher">
-     <button class="lang-btn" data-lang="az">
-      AZ
-     </button>
-     <button class="lang-btn" data-lang="en">
-      EN
-     </button>
-     <button class="lang-btn" data-lang="ru">
-      RU
-     </button>
-    </li>
-   </ul>
-  </nav>
-
-    <!-- CONTACT FORM WRAPPER -->
-    <div class="contact-wrapper">
-      <div class="contact-container">
-        <div class="contact-header">
-          <h2>Get In Touch</h2>
-          <p data-i18n="contact_intro">
-            We'd love to hear from you. Send us a message!
-          </p>
-        </div>
-
-        <form id="contactForm">
-          <!-- FULL NAME -->
-          <div class="form-group">
-            <input
-              type="text"
-              id="name"
-              name="name"
-              placeholder=" "
-              required
-            />
-            <label for="name" data-i18n="form_name_label">Full Name *</label>
-            <span
-              class="error-message"
-              id="nameError"
-              data-i18n="error_name"
-            >
-              Please enter your name
-            </span>
-          </div>
-
-          <!-- EMAIL -->
-          <div class="form-group">
-            <input
-              type="email"
-              id="email"
-              name="email"
-              placeholder=" "
-              required
-            />
-            <label for="email" data-i18n="form_email_label">
-              Email Address *
-            </label>
-            <span
-              class="error-message"
-              id="emailError"
-              data-i18n="error_email"
-            >
-              Please enter a valid email
-            </span>
-          </div>
-
-          <!-- PHONE -->
-          <div class="form-group">
-            <input
-              type="tel"
-              id="phone"
-              name="phone"
-              placeholder=" "
-            />
-            <label for="phone">Phone Number</label>
-          </div>
-
-          <!-- SUBJECT -->
-          <div class="form-group">
-            <input
-              type="text"
-              id="subject"
-              name="subject"
-              placeholder=" "
-              required
-            />
-            <label for="subject" data-i18n="form_subject_label">
-              Subject *
-            </label>
-            <span
-              class="error-message"
-              id="subjectError"
-              data-i18n="error_subject"
-            >
-              Please enter a subject
-            </span>
-          </div>
-
-          <!-- MESSAGE -->
-          <div class="form-group">
-            <textarea
-              id="message"
-              name="message"
-              placeholder=" "
-              required
-            ></textarea>
-            <label for="message" data-i18n="form_message_label">
-              Message *
-            </label>
-            <span
-              class="error-message"
-              id="messageError"
-              data-i18n="error_message"
-            >
-              Please enter your message
-            </span>
-            <!-- Buraya JS avtomatik character counter əlavə edəcək -->
-          </div>
-
-          <!-- SUBMIT BUTTON -->
-          <button
-            type="submit"
-            class="submit-btn"
-            data-i18n="form_send_button"
-          >
-            Send Message
-          </button>
-
-          <!-- SUCCESS MESSAGE -->
-          <div
-            class="success-message"
-            id="successMessage"
-            data-i18n="success_message"
-          >
-            ✓ Thank you! Your message has been sent successfully.
-          </div>
-        </form>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <link rel="stylesheet" href="../global css/global.css" />
+    <link rel="stylesheet" href="../global css/config.css" />
+    <link rel="stylesheet" href="../global css/reset.css" />
+    <link rel="stylesheet" href="../STYLE/contact.css" />
+    <link rel="stylesheet" href="../STYLE/responsive.css">
+  </head>
+  <body>
+    <!-- Navigation -->
+    <nav>
+      <div class="logo">
+        <i class="fas fa-plane-departure"></i>
+        <span>AZ Land</span>
       </div>
+      <ul class="nav-links">
+        <li><a href="./home.html">Ana Səhifə</a></li>
+        <li><a href="./map.html">Xəritə</a></li>
+        <li><a href="./faq.html">FAQ</a></li>
+        <li><a href="./games.html">Oyunlar</a></li>
+        <li><a href="./about-us.html">Haqqımızda</a></li>
+        <li><a href="./contact.html" class="active">Əlaqə</a></li>
+        <li><a href="./price.html">Qiymətlər</a></li>
+        <li><a href="./login.html" class="btn-login" id="nav-auth-btn">Giriş</a></li>
+      </ul>
+    </nav>
+    <!-- MAIN -->
+    <!-- MAIN -->
+    <!-- MAIN -->
+    <div class="contact-header">
+      <div class="mail-icon-small">
+        <svg viewBox="0 0 24 24">
+          <path
+            d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+          <polyline points="22,6 12,13 2,6"></polyline>
+        </svg>
+      </div>
+      <h1>Bizimle Əlaqə</h1>
+      <p class="subtitle">
+        Sualınız var? Bizə yazın, ən qısa zamanda cavab verəcəyik
+      </p>
     </div>
 
-   <!-- FOOTER -->
+    <form class="contact-form" id="contactForm">
+      <div class="form-group">
+        <label for="name">Ad <span class="required">*</span></label>
+        <input
+          type="text"
+          id="name"
+          placeholder="Adınızı daxil edin"
+          required />
+      </div>
+
+      <div class="form-group">
+        <label for="email">Email <span class="required">*</span></label>
+        <input
+          type="email"
+          id="email"
+          placeholder="Email ünvanınızı daxil edin"
+          required />
+      </div>
+
+      <div class="form-group">
+        <label for="message">Mesaj <span class="required">*</span></label>
+        <textarea
+          id="message"
+          placeholder="Mesajınız üçün..."
+          required></textarea>
+      </div>
+
+      <label style="margin-bottom: 10px"
+        >📎 Şəkil Əlavə Et (İf İstəyi) 📷</label
+      >
+      <div class="file-upload" id="fileUpload">
+        <div class="file-upload-icon">
+          <svg viewBox="0 0 24 24">
+            <rect x="3" y="3" width="18" height="18" rx="2" ry="2" />
+            <circle cx="8.5" cy="8.5" r="1.5" />
+            <polyline points="21 15 16 10 5 21" />
+          </svg>
+        </div>
+        <div class="file-upload-text">Şəkil yükləyin və ya bura sürün</div>
+        <div class="file-upload-subtext">PNG, JPG və ya GIF</div>
+        <input type="file" id="fileInput" accept="image/*" />
+      </div>
+
+      <button type="submit" class="submit-btn">
+        <svg viewBox="0 0 24 24">
+          <line x1="22" y1="2" x2="11" y2="13"></line>
+          <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
+        </svg>
+        Göndər
+      </button>
+    </form>
+
+    <div class="info-cards">
+      <div class="info-card">
+        <div class="info-card-icon">
+          <svg viewBox="0 0 24 24">
+            <path
+              d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+            <polyline points="22,6 12,13 2,6"></polyline>
+          </svg>
+        </div>
+        <h3>Email</h3>
+        <p>info@travelx.az</p>
+      </div>
+
+      <div class="info-card">
+        <div class="info-card-icon">
+          <svg viewBox="0 0 24 24">
+            <path
+              d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>
+          </svg>
+        </div>
+        <h3>Telefon</h3>
+        <p>+994 12 345 67 89</p>
+      </div>
+
+      <div class="info-card">
+        <div class="info-card-icon">
+          <svg viewBox="0 0 24 24">
+            <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
+            <circle cx="12" cy="10" r="3"></circle>
+          </svg>
+        </div>
+        <h3>Ünvan</h3>
+        <p>Bakı, Azərbaycan</p>
+      </div>
+    </div>
+    <!-- Footer -->
+    <!-- FOOTER -->
     <footer>
       <div class="footer-content">
         <div class="footer-brand">
           <div class="logo">
-            <i class="fas fa-plane-departure"> </i>
-            <span> AZ Land </span>
+            <i class="fas fa-plane-departure"></i>
+            <span>AZ Land</span>
           </div>
           <p class="footer-description">Dünyanı kəşf etməyin ən yaxşı yolu</p>
         </div>
         <div class="footer-column">
           <h4>Sürətli Keçidlər</h4>
           <ul class="footer-links">
-            <li>
-              <a href="./index.html"> Ana Səhifə </a>
-            </li>
-            <li>
-              <a href="./map.html"> Xəritə </a>
-            </li>
-            <li>
-              <a href="./faq.html"> FAQ </a>
-            </li>
-            <li>
-              <a href="./games.html"> Oyunlar </a>
-            </li>
-            <li>
-              <a href="./about-us.html"> Haqqımızda </a>
-            </li>
-            <li>
-              <a href="./contact.html"> Əlaqə </a>
-            </li>
-            <li>
-              <a href="./price.html"> Qiymətlər </a>
-            </li>
+            <li><a href="./home.html">Ana Səhifə</a></li>
+            <li><a href="./map.html">Xəritə</a></li>
+            <li><a href="./faq.html">FAQ</a></li>
+            <li><a href="./about-us.html">Haqqımızda</a></li>
+            <li><a href="./contact.html">Əlaqə</a></li>
+            <li><a href="./price.html">Qiymətlər</a></li>
           </ul>
         </div>
         <div class="footer-column">
           <h4>Əlaqə</h4>
           <ul class="footer-contact">
-            <li>
-              <i class="fas fa-map-marker-alt"> </i>
-              Bakı, Azərbaycan
-            </li>
-            <li>
-              <i class="fas fa-envelope"> </i>
-              info@travelx.az
-            </li>
-            <li>
-              <i class="fas fa-phone"> </i>
-              +994 12 345 67 89
-            </li>
+            <li><i class="fas fa-map-marker-alt"></i> Bakı, Azərbaycan</li>
+            <li><i class="fas fa-envelope"></i> info@travelx.az</li>
+            <li><i class="fas fa-phone"></i> +994 12 345 67 89</li>
           </ul>
         </div>
         <div class="footer-column">
           <h4>Bizi İzləyin</h4>
           <div class="social-links">
-            <a class="social-link" href="#">
-              <i class="fab fa-facebook-f"> </i>
-            </a>
-            <a class="social-link" href="#">
-              <i class="fab fa-instagram"> </i>
-            </a>
-            <a class="social-link" href="#">
-              <i class="fab fa-twitter"> </i>
-            </a>
-            <a class="social-link" href="#">
-              <i class="fab fa-youtube"> </i>
-            </a>
+            <a href="#" class="social-link"
+              ><i class="fab fa-facebook-f"></i
+            ></a>
+            <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
           </div>
         </div>
       </div>
     </footer>
     <script src="../SCRIPT/ai-chat.js"></script>
-    <script src="../SCRIPT/fag.js"></script>
-    <script src="../SCRIPT/lang.js"></script>
+    <script src="../SCRIPT/contact.js"></script>  
+
   </body>
 </html>
